--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+     <title>My Portfolio</title>
+     <link rel="stylesheet" href="./assets/css/styles.css" />
+
 </head>
 <body>
-    
+    <header>
+        <h1>Domenic Wilhelm</h1>
+        <nav>
+            <ul>
+                <li><a href=""></a>GitHub</li>
+                <li><a href=""></a>LinkedIn</li>
+                <li><a href=""></a>About Me</li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
